--- a/src/app/annotations/highlights/highlights.component.html
+++ b/src/app/annotations/highlights/highlights.component.html
@@ -1,3 +1,7 @@
-<div #annotation class="annotation"
-     (mousedown)="onMouseDown($event)"
+<div ngDraggable
+     ngResizable
+     rzHandles="all"
+     class="annotation"
+     bounds="true"
+     (mousedown)="onMouseDown()"
      (mouseup)="onMouseUp()"></div>
