--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <button (click)="addAnnotation()">Add Highlight</button>
-<button (mouseenter)="removeAnnotation()">Remove Highlight</button>
-<div>
+<div id="container">
     <app-highlights #highlights></app-highlights>
     <img id="image" src="http://i.imgur.com/B2RWKMl.png">
 </div>
