--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <button (click)="addAnnotation()">Add Highlight</button>
 <div id="container">
-    <app-highlights #highlights></app-highlights>
+    <app-annotations #annotations></app-annotations>
     <img id="image" src="http://i.imgur.com/B2RWKMl.png">
 </div>
