--- a/src/app/annotations/annotations.component.html
+++ b/src/app/annotations/annotations.component.html
@@ -1,3 +1,3 @@
 <div #annotationContainer id="annotation-container">
-    <app-annotations #annotation *ngFor="let annotation of annotations"></app-annotations>
+    <app-highlights #annotation *ngFor="let annotation of annotations"></app-highlights>
 </div>
